# Coding

./: .gitignore  README.md
Android/: Emulator.md
Android/insta-automate/: pyproject.toml
Android/insta-automate/model/: base.py
Android/my_modules/: README.md  pyproject.toml  scratch.txt  test.ipynb  test.py
Android/my_modules/src/my_modules/: __init__.py  kubernetes.py  logger.py  postgres.py  process.py
Android/my_modules/src/my_modules/android/: emulator.py
Containers/Rhel8 - GO/.devcontainer/: dockerfile
Containers/Rhel8/.devcontainer/: devcontainer.json
Containers/Rust/.devcontainer/: devcontainer.json  dockerfile
Flutter/: README.md
Java/CertGenerator/: pom.xml
Kubernetes/Dev-Containers/v1/: Dockerfile
Kubernetes/Learning/: .devcontainer  Dockerfile
Kubernetes/Learning/app/: elr_postgres_company_page.py  main.py
Kubernetes/Learning/test_helmchart/: Chart.yaml  (+1 more)
Python/Android-Backup/: test.ipynb
Python/French/: convert.py  hello.py  pyproject.toml  test.ipynb  text_output.txt
Python/Hash/: crypt.ipynb  duplicates.ipynb  exif_data.py  file_hash.py  main.py  media_hash.py  model.py  pyproject.toml  refresh_db.py  test.ipynb  upload.ipynb
Python/Instagram/: backup.py  clean_scanned.py  instagram.py  main.py  oneplus.py  test.ipynb  utils.py
Python/Postgres/: model.py  pyproject.toml
Python/asyncio-http/: pyproject.toml  test.ipynb  test.py  vars.py
Python/ftp-server/: ftp_cli.py  ftp_server.py  ip_addr.py
Rust/guessing_game/: Cargo.toml
Rust/rect_struct/: Cargo.toml
Scripts/: insta_automate.ps1  postgres_restart.ps1  spotlight.cpp  winget_download.ps1
UBS/coding/: run.sh
(+53 files in other folders)
