[project]
name = "insta-automate"
version = "0.1.0"
description = "My custom python modules."
readme = "README.md"
authors = [
    { name = "SeshuTarapatla", email = "seshu.tarapatla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "my-modules",
]

[project.scripts]
insta-automate = "insta_automate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
my-modules = { path = "../my_modules", editable = true }
