[project]
name = "my-modules"
version = "0.1.0"
description = "My custom python modules."
readme = "README.md"
authors = [
    { name = "SeshuTarapatla", email = "seshu.tarapatla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "rich>=14.0.0",
    "uiautomator2>=3.2.9",
]

[project.scripts]
my-modules = "my_modules:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
]
